kubernetes/service.yml
apiVersion: v1
kind: Service
metadata: 
  name: reo-service
  namespace: dev
spec:
  selector: 
    app: reo
  ports:
  - name: http 
    protocol: TCP
    port: 8080
    targetPort: 3000
