kubernetes/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress 
metadata: 
  name: roe-ingress
spec:
  ingressClassName: nginx
  rules:
  - http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: roe-service 
            port:
              number: 8080
